# refined

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  flake.nix  readme.md  result  update-examples.sh  verify.sh
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml  verify.yml
examples/axum/: Cargo.toml  flake.nix
examples/axum/src/: main.rs
examples/optimized/: Cargo.toml  flake.nix
examples/optimized/src/: main.rs
examples/quickstart/: Cargo.toml
examples/quickstart/src/: main.rs
src/: boolean.rs  character.rs  lib.rs  prelude.rs  string.rs
src/boundable/: mod.rs  signed.rs  unsigned.rs
src/implication/: arithmetic_imp.rs  boolean_imp.rs  boundable_imp.rs  mod.rs
src/implication/arithmetic/: add.rs  div.rs  mod.rs  mul.rs  sub.rs
src/refinement/: mod.rs  named.rs  stateful.rs
