[package]
name = "refined"
version = "0.0.4"
edition = "2021"
description = "Simple refinement types; parse, don't validate!"
documentation = "https://docs.rs/refined"
repository = "https://github.com/jkaye2012/refined"
license = "MIT OR Apache-2.0"

[dependencies]
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0.218", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2.0.11", default-features = false }

[dev-dependencies]
serde_json = "1.0.139"
serde = "1.0.218"

[features]
default = [ "serde", "std" ]
std = [ "thiserror/std", "serde?/std" ]
# Enabel full features excluding `optimized`.
full = [ "arithmetic", "regex", "serde", "std" ]
implication = []
regex = [ "dep:regex" ]
serde = [ "dep:serde" ]
arithmetic = [ "implication" ]
optimized = []

[package.metadata.docs.rs]
all-features = true
