[package]
name = "refined"
version = "0.3.1"
edition = "2021"
description = "Simple refinement types; parse, don't validate!"
documentation = "https://docs.rs/refined"
repository = "https://github.com/jkaye2012/refined"
license = "MIT OR Apache-2.0"

[dependencies]
const_format = { version = "0.2.34" }
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2.0.12", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.142"
serde = "1.0.219"

[features]
default = [ "serde", "std" ]
alloc = [ "serde?/alloc", "dep:thiserror" ]
std = [ "alloc", "thiserror/std", "serde?/std", "regex?/std" ]
implication = []
regex = [ "alloc", "dep:regex" ]
serde = [ "dep:serde" ]
arithmetic = [ "implication" ]
full = [ "arithmetic", "regex", "serde", "std" ]
optimized = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]
