[package]
name = "refined-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
axum-test = "17.0.2"
rand = "0.8.5"
refined = { path = "../../" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.8"
tokio = { version = "1.44.2", features = ["full"] }
